--- a/nglview/tests/notebooks/trajlist_parmed.ipynb
+++ b/nglview/tests/notebooks/trajlist_parmed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -27,30 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# try cache\n",
-    "view.caching()"
+    "view.frame = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.uncaching()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -58,22 +46,29 @@
     {
      "data": {
       "text/plain": [
-       "[array([], dtype=float32), array([[  2.56800008,  12.35900021,   0.093     ],\n",
-       "        [  2.4519999 ,  12.64799976,   1.05299997],\n",
-       "        [  3.43899989,  11.84700012,   0.105     ],\n",
+       "{0: array([[ -6.91900000e+00,   6.90100000e+00,   9.17000000e-01],\n",
+       "        [ -7.68200000e+00,   6.02500000e+00,  -1.00000000e-02],\n",
+       "        [ -6.84000000e+00,   4.88900000e+00,  -5.89000000e-01],\n",
        "        ..., \n",
-       "        [  7.75600004,  -9.58300018,   3.98699999],\n",
-       "        [  6.70900011, -10.35000038,   5.08199978],\n",
-       "        [  7.40799999, -11.18200016,   3.5940001 ]], dtype=float32)]"
+       "        [  1.59300000e+00,   1.14500000e+01,   1.98500000e+00],\n",
+       "        [  2.33400000e+00,   9.92700000e+00,   2.51500000e+00],\n",
+       "        [  3.56900000e+00,   1.12430000e+01,   9.68000000e-01]]),\n",
+       " 1: array([[  0.301     ,   5.09499979,   3.48099995],\n",
+       "        [  1.21800005,   5.14300013,   3.05999994],\n",
+       "        [  0.067     ,   4.16699982,   3.8039999 ],\n",
+       "        ..., \n",
+       "        [ -2.02200007, -14.44799995,  -0.065     ],\n",
+       "        [ -1.24600005, -15.06400013,   1.46700001],\n",
+       "        [ -3.01799989, -15.0539999 ,   1.08299994]])}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "view.coordinates"
+    "view.coordinates_dict"
    ]
   }
  ],
@@ -93,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
