--- a/nglview/tests/notebooks/trajlist_simpletraj.ipynb
+++ b/nglview/tests/notebooks/trajlist_simpletraj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -10,11 +10,11 @@
     {
      "data": {
       "text/plain": [
-       "(<nglview.SimpletrajTrajectory at 0x2aaacd558b70>,\n",
-       " <nglview.SimpletrajTrajectory at 0x2aaacd544f98>)"
+       "(<nglview.SimpletrajTrajectory at 0x10cc2dac8>,\n",
+       " <nglview.SimpletrajTrajectory at 0x10cc2db00>)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
     "\n",
     "# I am to lazy\n",
     "pt.load(fn, tn)[:1].save('../data/tz2.single.pdb', overwrite=True)\n",
-    "pt.load(fn, tn).save('../tz2.nc', overwrite=True)\n",
+    "pt.load(fn, tn).save('../data/tz2.nc', overwrite=True)\n",
     "\n",
     "traj = nv.SimpletrajTrajectory(nv.datafiles.XTC, nv.datafiles.GRO)\n",
     "traj2 = nv.SimpletrajTrajectory('../data/tz2.nc', '../data/tz2.single.pdb')\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -50,18 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.caching()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
