--- a/nglview/tests/notebooks/test_load_binary_different_folder_ccp4.ipynb
+++ b/nglview/tests/notebooks/test_load_binary_different_folder_ccp4.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import pytraj as pt\n",
     "import nglview as nv"
    ]
   },
@@ -44,44 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "view.add_surface(opacity=0.4, wireframe=True, color='blue', component=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.render_image()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "",
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# can not render\n",
-    "from IPython import display\n",
-    "\n",
-    "display.Image(view._image_data)"
+    "view.component_1.add_surface(opacity=0.4, wireframe=True, color='blue')"
    ]
   }
  ],
