update layout a bit

--- a/nglview/tests/notebooks/layout.ipynb
+++ b/nglview/tests/notebooks/layout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -10,13 +10,13 @@
    "source": [
     "import pytraj as pt, nglview as nv\n",
     "\n",
-    "trajs = [pt.datafiles.load_tz2()[:] for _ in range(4)]\n",
+    "trajs = [pt.datafiles.load_tz2()[:], pt.datafiles.load_trpcage()]\n",
     "views = [nv.show_pytraj(traj) for traj in trajs]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -38,10 +38,10 @@
     {
      "data": {
       "text/plain": [
-       "<traitlets.traitlets.link at 0x7f5b075f4128>"
+       "<traitlets.traitlets.link at 0x10959dc50>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,25 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "views[0].add_licorice('not hydrogen', color='blue')\n",
-    "views[1].add_rope('not hydrogen', color='residueindex')"
+    "view1 = views[1]\n",
+    "view1.add_rope('not hydrogen', color='residueindex')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "views[0]._clear_repr()"
+    "view0 = views[0]\n",
+    "view0.add_licorice('not hydrogen', color='blue')"
    ]
   }
  ],
