--- a/nglview/tests/notebooks/loadFile.ipynb
+++ b/nglview/tests/notebooks/loadFile.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "view.center_view(index=0)"
+    "view.center_view(component=0)"
    ]
   },
   {
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "view.center_view(index=1)"
+    "view.center_view(component=1)"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
