--- a/nglview/tests/notebooks/test_link_player.ipynb
+++ b/nglview/tests/notebooks/test_link_player.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -27,13 +27,13 @@
     "from ipywidgets import IntText, FloatText, HBox\n",
     "\n",
     "int_text = IntText(2)\n",
-    "float_text = FloatText(0.04)\n",
+    "float_text = FloatText(40)\n",
     "HBox([int_text, float_text])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -41,10 +41,10 @@
     {
      "data": {
       "text/plain": [
-       "<traitlets.traitlets.link at 0x1095c30f0>"
+       "<traitlets.traitlets.link at 0x109213e10>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
