--- a/nglview/tests/notebooks/test_simpletraj.ipynb
+++ b/nglview/tests/notebooks/test_simpletraj.ipynb
@@ -10,7 +10,7 @@
     {
      "data": {
       "text/plain": [
-       "<nglview.SimpletrajTrajectory at 0x2aaacbc31e48>"
+       "<nglview.SimpletrajTrajectory at 0x10411c550>"
       ]
      },
      "execution_count": 1,
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "view.caching()"
+    "view._clear_repr()"
    ]
   },
   {
@@ -58,23 +58,12 @@
    },
    "outputs": [],
    "source": [
-    "view._clear_repr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "view.add_cartoon()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
