--- a/nglview/tests/notebooks/timing_send_data.ipynb
+++ b/nglview/tests/notebooks/timing_send_data.ipynb
@@ -2,31 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pytraj as pt, nglview as nv"
+    "import pytraj as pt, nglview as nv\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2016-06-13 13:32:51--  http://ambermd.org/tutorials/advanced/tutorial16/include/DOPC_128.inpcrd\n",
+      "Resolving ambermd.org... 165.230.17.132\n",
+      "Connecting to ambermd.org|165.230.17.132|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1163786 (1.1M) [text/plain]\n",
+      "Saving to: 'DOPC_128.inpcrd.1'\n",
+      "\n",
+      "DOPC_128.inpcrd.1   100%[===================>]   1.11M  --.-KB/s    in 0.08s   \n",
+      "\n",
+      "2016-06-13 13:32:52 (14.8 MB/s) - 'DOPC_128.inpcrd.1' saved [1163786/1163786]\n",
+      "\n",
+      "--2016-06-13 13:32:52--  http://ambermd.org/tutorials/advanced/tutorial16/include/DOPC_128.prmtop\n",
+      "Resolving ambermd.org... 165.230.17.132\n",
+      "Connecting to ambermd.org|165.230.17.132|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 9388148 (9.0M) [text/plain]\n",
+      "Saving to: 'DOPC_128.prmtop.1'\n",
+      "\n",
+      "DOPC_128.prmtop.1   100%[===================>]   8.95M  15.9MB/s    in 0.6s    \n",
+      "\n",
+      "2016-06-13 13:32:52 (15.9 MB/s) - 'DOPC_128.prmtop.1' saved [9388148/9388148]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# !wget http://ambermd.org/tutorials/advanced/tutorial16/include/DOPC_128.inpcrd\n",
-    "# !wget http://ambermd.org/tutorials/advanced/tutorial16/include/DOPC_128.prmtop\n",
+    "!wget http://ambermd.org/tutorials/advanced/tutorial16/include/DOPC_128.inpcrd\n",
+    "!wget http://ambermd.org/tutorials/advanced/tutorial16/include/DOPC_128.prmtop\n",
     "traj = pt.load('DOPC_128.inpcrd', 'DOPC_128.prmtop')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -51,19 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pytraj.Trajectory, 1 frames: \n",
+       "Size: 0.000713 (GB)\n",
+       "<Topology: 31882 atoms, 5130 residues, 4874 mols, PBC with box type = ortho>\n",
+       "           "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "traj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +159,7 @@
    "source": [
     "mytime = time()*1000\n",
     "\n",
-    "data_base64 = {'0': dict(data=nv.encode_numpy(xyz, dtype='f4'), \n",
+    "data_base64 = {'0': dict(data=nv.encode_base64(xyz, dtype='f4'), \n",
     "                  dtype='f4',\n",
     "                  shape=xyz.shape)}\n",
     "\n",
@@ -133,9 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
