--- a/nglview/tests/notebooks/load_dx.ipynb
+++ b/nglview/tests/notebooks/load_dx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -13,21 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view = nv.show_structure_file('volmap.dx.save', \n",
-    "                              ext='dx', \n",
-    "                              representations=[{'type': 'surface'}])\n",
+    "view = nv.NGLWidget()\n",
+    "\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.add_component('../data/volmap.dx.save', ext='dx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -38,24 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "view._load_data(open('../data/tz2.pdb').read(), ext='pdb')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.add_cartoon(color='blue', component=1)"
    ]
   }
  ],
