fix_player_with_adding_structure_first

--- a/nglview/tests/notebooks/fix_player_if_adding_single_struture_first.ipynb
+++ b/nglview/tests/notebooks/fix_player_if_adding_single_struture_first.ipynb
@@ -8,9 +8,11 @@
    },
    "outputs": [],
    "source": [
+    "import pytraj as pt\n",
     "import nglview as nv\n",
+    "from nglview.utils import get_colors_from_b64\n",
     "\n",
-    "view = nv.show_pdbid(\"1tsu\")\n",
+    "view = nv.NGLWidget()\n",
     "view"
    ]
   },
@@ -18,18 +20,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.add_surface(opacity=0.3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Make empty Widget first"
+    "pdb = nv.PdbIdStructure('1tsu')\n",
+    "view.add_component(pdb)"
    ]
   },
   {
@@ -40,20 +36,20 @@
    },
    "outputs": [],
    "source": [
-    "view2 = nv.NGLWidget()\n",
-    "view2"
+    "traj = pt.fetch_pdb('1l2y')\n",
+    "\n",
+    "traj.xyz -= 5."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pdb = nv.PdbIdStructure('1tsu')\n",
-    "view2.add_component(pdb)"
+    "view.add_trajectory(traj)"
    ]
   },
   {
@@ -64,22 +60,21 @@
    },
    "outputs": [],
    "source": [
-    "import pytraj as pt\n",
-    "\n",
-    "traj = pt.fetch_pdb('1l2y')\n",
-    "\n",
-    "ntraj = nv.PyTrajTrajectory(traj)"
+    "view.add_component('../data/tz2.pdb')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view2.add_trajectory(ntraj)"
+    "view.orientation = [[26.986195480284277, 27.320854021454878, -41.5475977955896],\n",
+    " [-0.6269326632616247, 0.7725263478955967, 0.10078927295465688],\n",
+    " [-16.400125980377197, -5.994229793548584, -10.967737674713135],\n",
+    " [0, 0, 0]]"
    ]
   },
   {
@@ -90,7 +85,8 @@
    },
    "outputs": [],
    "source": [
-    "view2.clear_representations(component=1)"
+    "view.component_2.clear()\n",
+    "view.component_2.add_line()"
    ]
   },
   {
@@ -101,7 +97,8 @@
    },
    "outputs": [],
    "source": [
-    "view2.add_licorice(component=1)"
+    "view.frame = 0\n",
+    "view.render_image()"
    ]
   },
   {
@@ -112,7 +109,42 @@
    },
    "outputs": [],
    "source": [
-    "view2.center_view(component=1)"
+    "c0 = get_colors_from_b64(view._image_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.frame = 2\n",
+    "view.render_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c1 = get_colors_from_b64(view._image_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# make sure the player actually plays\n",
+    "assert c0 != c1"
    ]
   }
  ],
