Fix player with adding structure first (#270)
* update test

* fix_player_with_adding_structure_first

* show_pdbid

* not a bug anymore

--- a/nglview/tests/notebooks/fix_player_if_adding_single_struture_first.ipynb
+++ b/nglview/tests/notebooks/fix_player_if_adding_single_struture_first.ipynb
@@ -2,175 +2,149 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import pytraj as pt\n",
     "import nglview as nv\n",
+    "from nglview.utils import get_colors_from_b64\n",
     "\n",
-    "view = nv.show_pdbid(\"1tsu\")\n",
+    "view = nv.NGLWidget()\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.add_surface(opacity=0.3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Make empty Widget first"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2 = nv.NGLWidget()\n",
-    "view2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "pdb = nv.PdbIdStructure('1tsu')\n",
-    "view2.add_component(pdb)"
+    "view.add_component(pdb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pytraj as pt\n",
+    "traj = pt.fetch_pdb('1l2y')\n",
     "\n",
-    "traj = pt.fetch_pdb('1l2y')"
+    "traj.xyz -= 5."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view2.add_trajectory(traj)"
+    "view.add_trajectory(traj)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view2.clear_representations(component=1)"
+    "view.add_component('../data/tz2.pdb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2.add_licorice(component=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2.center_view(component=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pytraj.Trajectory, 38 frames: \n",
-       "Size: 0.000258 (GB)\n",
-       "<Topology: 304 atoms, 20 residues, 1 mols, PBC with box type = ortho>\n",
-       "           "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "traj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view2.frame = 2"
+    "view.orientation = [[26.986195480284277, 27.320854021454878, -41.5475977955896],\n",
+    " [-0.6269326632616247, 0.7725263478955967, 0.10078927295465688],\n",
+    " [-16.400125980377197, -5.994229793548584, -10.967737674713135],\n",
+    " [0, 0, 0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "coordinates = view2.coordinates_dict[1]"
+    "view.component_2.clear()\n",
+    "view.component_2.add_line()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from numpy.testing import assert_almost_equal\n",
-    "\n",
-    "assert_almost_equal(traj[2].xyz, coordinates)"
+    "view.frame = 0\n",
+    "view.render_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c0 = get_colors_from_b64(view._image_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.frame = 2\n",
+    "view.render_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c1 = get_colors_from_b64(view._image_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# make sure the player actually plays\n",
+    "assert c0 != c1"
    ]
   }
  ],
