--- a/nglview/tests/notebooks/test_interpolate.ipynb
+++ b/nglview/tests/notebooks/test_interpolate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,24 +18,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# linear as default\n",
     "view.player.interpolate = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "view.player.interpolate = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# spline\n",
+    "view.player.interpolate = True\n",
+    "view.player.iparams = dict(type='spline', step=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# linear\n",
+    "view.player.interpolate = True\n",
+    "view.player.iparams = dict(type='linear', step=10)"
    ]
   }
  ],
