--- a/nglview/tests/notebooks/test_interpolate.ipynb
+++ b/nglview/tests/notebooks/test_interpolate.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -63,6 +63,18 @@
     "# linear\n",
     "view.player.interpolate = True\n",
     "view.player.iparams = dict(type='linear', step=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# backward\n",
+    "view.player.step = -1"
    ]
   }
  ],
