add more gui for player: interpolation

--- a/nglview/tests/notebooks/test_display_player.ipynb
+++ b/nglview/tests/notebooks/test_display_player.ipynb
@@ -8,15 +8,23 @@
    },
    "outputs": [],
    "source": [
-    "import pytraj as pt, nglview as nv\n",
-    "from ipywidgets import VBox\n",
+    "import nglview as nv\n",
+    "import pytraj as pt\n",
     "\n",
     "traj = pt.datafiles.load_tz2()\n",
-    "\n",
-    "view = traj.view()\n",
-    "view.clear()\n",
-    "view.add_licorice()\n",
-    "VBox([view, view.player._display()])"
+    "view = nv.show_pytraj(traj)\n",
+    "view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view.player._display()"
    ]
   }
  ],
