--- a/nglview/tests/notebooks/test_display_player.ipynb
+++ b/nglview/tests/notebooks/test_display_player.ipynb
@@ -26,6 +26,28 @@
    "source": [
     "view.player._display()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view.player.spin"
+   ]
   }
  ],
  "metadata": {
