update notebook for volmap.dx

--- a/nglview/tests/notebooks/load_dx.ipynb
+++ b/nglview/tests/notebooks/load_dx.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "view.add_component('../data/volmap.dx.save', ext='dx')"
+    "view.add_component('../data/volmap.dx', ext='dx')"
    ]
   },
   {
