--- a/nglview/tests/notebooks/api/test_2_widget_views_fist_time_loaded.ipynb
+++ b/nglview/tests/notebooks/api/test_2_widget_views_fist_time_loaded.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -82,8 +82,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -98,6 +99,28 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {
+    "a41f4aad74764ac7809a04e2e26dfc3c": {
+     "views": [
+      {
+       "cell_index": 0
+      },
+      {
+       "cell_index": 1
+      }
+     ]
+    },
+    "a9ea69deb77a41da94f2e6f171b96d10": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
