--- a/examples/sandbox/ambermd/ambermd_view.ipynb
+++ b/examples/sandbox/ambermd/ambermd_view.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,11 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<subprocess.Popen at 0x7f7497676dd8>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# require sander\n",
     "import os\n",
@@ -53,12 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# use reference for superpose\n",
     "ambermd = AmberMD(top='./peptide.top', restart='./md.r', reference='./min.rst7')\n",
     "ambermd.initialize()"
    ]
@@ -72,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -82,19 +94,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stop simulation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "process.terminate()"
+    "# uncomment\n",
+    "# process.terminate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Do other stuff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +130,30 @@
     "# You can do other stuff here\n",
     "\n",
     "# ambermd.view.add_axes()\n",
-    "# ambermd.view.add_line()"
+    "# ambermd.view.add_line()\n",
+    "# ambermd.view.remove_axes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Popen.wait of <subprocess.Popen object at 0x7f7497676dd8>>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process."
    ]
   }
  ],
@@ -128,31 +178,17 @@
   },
   "widgets": {
    "state": {
-    "3e0c199de5ac4420ad74913e938230d8": {
+    "e83d626b11384702b8ca22e371b7ead8": {
      "views": [
       {
-       "cell_index": 2
+       "cell_index": 5
       }
      ]
     },
-    "6b187a4198c54277a128cfadae21d4db": {
+    "f090be2cd8a64b5b8d931d67366c7fcd": {
      "views": [
       {
-       "cell_index": 2
-      }
-     ]
-    },
-    "6b334f2f1fd747d0b068a40a63c4a72f": {
-     "views": [
-      {
-       "cell_index": 2
-      }
-     ]
-    },
-    "8ce7c2b82c454313b54f711c247a4ea7": {
-     "views": [
-      {
-       "cell_index": 2
+       "cell_index": 5
       }
      ]
     }
