--- a/examples/sandbox/ambermd/ambermd_view.ipynb
+++ b/examples/sandbox/ambermd/ambermd_view.ipynb
@@ -35,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<subprocess.Popen at 0x7f7497676dd8>"
+       "<subprocess.Popen at 0x7fc213970128>"
       ]
      },
      "execution_count": 2,
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -136,24 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method Popen.wait of <subprocess.Popen object at 0x7f7497676dd8>>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "process."
+    "ambermd.view.add_ball_and_stick()"
    ]
   }
  ],
@@ -178,14 +167,14 @@
   },
   "widgets": {
    "state": {
-    "e83d626b11384702b8ca22e371b7ead8": {
+    "4c53f08a6d814b5584963153129c84e1": {
      "views": [
       {
        "cell_index": 5
       }
      ]
     },
-    "f090be2cd8a64b5b8d931d67366c7fcd": {
+    "da7a327443b349dba29360e919d613a1": {
      "views": [
       {
        "cell_index": 5
