--- a/examples/notebooks/using_two_screens.ipynb
+++ b/examples/notebooks/using_two_screens.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=images/two_screens.png></img>"
+    "<img src=../images/two_screens.png></img>"
    ]
   }
  ],
